clean up; change to 1956-1982

--- a/Table App A spawner model.Rmd
+++ b/Table App A spawner model.Rmd
@@ -20,15 +20,49 @@ Yr2 = max(dat$Year)
 ```{r seltableA1a, echo=FALSE}
 respdat = fullrespdat[which(fullrespdat$Year==Yr1):which(fullrespdat$Year==Yr2),]
 
-#set up table
 seltable = data.frame(
-  Model=paste("Time dependency test A ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
+  Model=paste("Naive Model ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
   Residual.df="", 
   MASE="",
   Adj.R2="", 
   F="", 
   p.value="", 
   AIC="", stringsAsFactors=FALSE)
+
+#5 is most complex
+m5 = gam(spawners0 ~ spawners1+spawners2, data=respdat)
+m1 = lm(spawners0 ~ -1 + offset(spawners1), data=m5$model)
+
+#Naive model
+i=1; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="$ln(S_t)$ = $ln(S_{t-1})$ + $\\epsilon$", 
+  Residual.df=round(aa[["df"]][2],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2="", 
+  F="", p.value="", 
+  AIC=round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+## Space
+tmp1 = data.frame(
+  Model="\\kern 1em", 
+  Residual.df="\\kern 1em", 
+  MASE="\\kern 1em", 
+  Adj.R2="",
+  F="\\kern 1em",
+  p.value="\\kern 1em", 
+  AIC="")
+tmp2 = data.frame(
+  Model=paste("Time dependency test A ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
+  Residual.df="", 
+  MASE="", 
+  Adj.R2="",
+  F="", 
+  p.value="", 
+  AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
 
 #5 is most complex
 m5 = gam(spawners0 ~ spawners1+spawners2, data=respdat)
@@ -192,7 +226,7 @@ seltable=rbind(seltable,tmp1)
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="3. $ln(S_t)$ = $\\alpha$ + $\\beta_1 ln(N_{t-1})$ + $\\beta_2 ln(S_{t-1})$ + $\\epsilon_t$", 
+  Model="3a. $ln(S_t)$ = $\\alpha$ + $\\beta_1 ln(N_{t-1})$ + $\\beta_2 ln(S_{t-1})$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -212,7 +246,7 @@ a=anova(m1,m2,m3, test="F")
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="3. $ln(S_t)$ = $\\alpha$ + $\\beta_1 ln(N_{t-1})$ + $\\beta_2 ln(S_{t-2})$ + $\\epsilon_t$", 
+  Model="3b. $ln(S_t)$ = $\\alpha$ + $\\beta_1 ln(N_{t-1})$ + $\\beta_2 ln(S_{t-2})$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -225,7 +259,7 @@ seltable=rbind(seltable,tmp1)
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste("Model selection tests of time-dependency the log catch during spawning months using F-tests of nested linear models.  $S_t$ is the catch during the spawning period (Jul-Sep). $N_t$ is the catch during the non-spawning period (Oct-Jun). $S_{t-1}$ and $N_{t-1}$ are the catch during the prior season during and after the spawning period respectively. $S_{t-2}$ and $N_{t-2}$ are the same for two seasons prior.  Test A uses catch during the spawning period as the explanatory variable.  Test B uses catch during the non-spawning period as the explanatory variable.  The numbers in front of the model equation indicate the level of nestedness. For Test C, there are two nested model sets, each with a different model 3.")
+thecap=paste("Model selection tests of time-dependency the log catch during spawning months using F-tests of nested linear models.  $S_t$ is the catch during the spawning period (Jul-Sep). $N_t$ is the catch during the non-spawning period (Oct-Jun). $S_{t-1}$ and $N_{t-1}$ are the catch during the prior season during and after the spawning period respectively. $S_{t-2}$ and $N_{t-2}$ are the same for two seasons prior.  Test A uses catch during the spawning period as the explanatory variable.  Test B uses catch during the non-spawning period as the explanatory variable.  The numbers in front of the model equation indicate the level of nestedness. For Test C, there are two nested model sets, each with a different model 3.  The Naive model is a model that uses the previous data point in the time series as the prediction; thus the Naive model has no estimated parameters.")
 fullcap=paste("Table ", ref("tabappA:spawner-model-linear", pre="A"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, escape=FALSE)
 ```
@@ -260,7 +294,7 @@ a=anova(m1,m2,m3, test="F")
 i=1; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(S_{t-1})$ + $\\epsilon_t$", 
+  Model="1. $ln(S_t)$ = $\\alpha$ + $\\beta ln(S_{t-1})$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -272,7 +306,7 @@ seltable=rbind(seltable,tmp1)
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $s(ln(S_{t-1}))$ + $\\epsilon_t$", 
+  Model="2. $ln(S_t)$ = $\\alpha$ + $s(ln(S_{t-1}))$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -284,7 +318,7 @@ seltable=rbind(seltable,tmp1)
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $s_1(ln(S_{t-1}))$ + $s_2(ln(S_{t-2}))$ + $\\epsilon_t$", 
+  Model="3. $ln(S_t)$ = $\\alpha$ + $s_1(ln(S_{t-1}))$ + $s_2(ln(S_{t-2}))$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -323,7 +357,7 @@ a=anova(m1,m2,m3, test="F")
 i=1; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon_t$", 
+  Model="1. $ln(S_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -335,7 +369,7 @@ seltable=rbind(seltable,tmp1)
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon_t$", 
+  Model="2. $ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -347,7 +381,7 @@ seltable=rbind(seltable,tmp1)
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(N_{t-2}))$ + $\\epsilon_t$", 
+  Model="3. $ln(S_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(N_{t-2}))$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -386,7 +420,7 @@ a=anova(m1,m2,m3, test="F")
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon_t$", 
+  Model="1. $ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -398,7 +432,7 @@ seltable=rbind(seltable,tmp1)
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(S_{t-1}))$ + $\\epsilon_t$", 
+  Model="2. $ln(S_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(S_{t-1}))$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -418,7 +452,7 @@ a=anova(m1,m2,m3, test="F")
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(S_{t-2}))$ + $\\epsilon_t$", 
+  Model="3. $ln(S_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(S_{t-2}))$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -431,7 +465,7 @@ seltable=rbind(seltable,tmp1)
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste("Model selection tests of time-dependency the catch during spawning months using non-linear responses instead of linear responses as in Table",ref("tabappA:spawner-model-linear", pre="A"), "See Table",ref("tabappA:spawner-model-linear", pre="A"), "for an explanation of the parameters and model set-up.")
+thecap=paste0("Model selection tests of time-dependency the catch during spawning months using non-linear responses instead of linear responses as in Table ",ref("tabappA:spawner-model-linear", pre="A"), ". See Table ",ref("tabappA:spawner-model-linear", pre="A"), " for an explanation of the parameters and model set-up.")
 fullcap=paste("Table ", ref("tabappA:spawner-model-nonlinear", pre="A"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, escape=FALSE)
 ```
@@ -442,30 +476,43 @@ cat("\\clearpage")
 
 
 ```{r seltableA-spawner-1956, echo=FALSE}
-respdat = fullrespdat[which(fullrespdat$Year==1956):which(fullrespdat$Year==2015),]
+respdat = fullrespdat[which(fullrespdat$Year==1956):which(fullrespdat$Year==(Yr1-1)),]
 
 #set up table
 seltable = data.frame(
-  Model=paste("Time dependency test B linear ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
+  Model=paste("Time dependency test A ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
   Residual.df="", 
   MASE="",
   Adj.R2="", 
-  F="", p.value="", 
+  F="", 
+  p.value="", 
   AIC="", stringsAsFactors=FALSE)
 
 #5 is most complex
-m5 = gam(spawners0 ~ nspawners1+nspawners2, data=respdat)
+m5 = gam(spawners0 ~ spawners1+spawners2, data=respdat)
 m0=m5
-m1 = gam(spawners0 ~ 1, data=m0$model)
-m2 = gam(spawners0 ~ nspawners1, data=m0$model)
-m3 = gam(spawners0 ~ nspawners1 + nspawners2, data=m0$model)
+m1 = gam(spawners0 ~ spawners1, data=m0$model)
+m2 = gam(spawners0 ~ s(spawners1, sp=0.6), data=m0$model)
+m3 = gam(spawners0 ~ s(spawners1, sp=0.6) + s(spawners2, sp=0.6), data=m0$model)
 a=anova(m1,m2,m3, test="F")
+
+#linear on S1 model
+i=1; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="1. $ln(S_t)$ = $\\alpha$ + $\\beta ln(S_{t-1})$ + $\\epsilon_t$", 
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F="", p.value="", 
+  AIC=round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
 
 #linear ln N_t
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon_t$", 
+  Model="2. $ln(S_t)$ = $\\alpha$ + $s(ln(S_{t-1}))$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -473,11 +520,11 @@ tmp1=data.frame(
   AIC=round(AIC(get(mod)), digits=2))
 seltable=rbind(seltable,tmp1)
 
-#linear ln N1 + ln N2
+#linear ln Catch1 + ln Catch2
 i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $\\beta_1 ln(N_{t-1})$ + $\\beta_2 ln(N_{t-2})$ + $\\epsilon_t$", 
+  Model="3. $ln(S_t)$ = $\\alpha$ + $s_1(ln(S_{t-1}))$ + $s_2(ln(S_{t-2}))$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -495,7 +542,7 @@ tmp1 = data.frame(
   p.value="\\kern 1em", 
   AIC="")
 tmp2 = data.frame(
-  Model=paste("Time dependency test B non-linear ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
+  Model=paste("Time dependency test B ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
   Residual.df="", 
   MASE="", 
   Adj.R2="",
@@ -507,17 +554,16 @@ seltable=rbind(seltable,tmp1,tmp2)
 #5 is most complex
 m5 = gam(spawners0 ~ nspawners1+nspawners2, data=respdat)
 m0=m5
-m1 = gam(spawners0 ~ 1, data=m0$model)
-m2 = gam(spawners0 ~ nspawners1, data=m0$model)
-m3 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=m0$model)
-m4 = gam(spawners0 ~ s(nspawners1, sp=0.6)+s(nspawners2, sp=0.6), data=m0$model)
-a=anova(m1,m2,m3,m4, test="F")
+m1 = gam(spawners0 ~ nspawners1, data=m0$model)
+m2 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=m0$model)
+m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(nspawners2, sp=0.6), data=m0$model)
+a=anova(m1,m2,m3, test="F")
 
-#linear ln N_t
-i=2; mod=paste("m",i,sep="")
+#linear on N1
+i=1; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon_t$", 
+  Model="1. $ln(S_t)$ = $\\alpha$ + $\\beta ln(N_{t-1})$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -525,11 +571,11 @@ tmp1=data.frame(
   AIC=round(AIC(get(mod)), digits=2))
 seltable=rbind(seltable,tmp1)
 
-#non linear ln N1
-i=3; mod=paste("m",i,sep="")
+#linear ln N_t
+i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon_t$", 
+  Model="2. $ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -538,10 +584,81 @@ tmp1=data.frame(
 seltable=rbind(seltable,tmp1)
 
 #linear ln Catch1 + ln Catch2
-i=4; mod=paste("m",i,sep="")
+i=3; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(S_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(N_{t-2}))$ + $\\epsilon_t$", 
+  Model="3. $ln(S_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(N_{t-2}))$ + $\\epsilon_t$", 
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
+  AIC=round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+## Space
+tmp1 = data.frame(
+  Model="\\kern 1em", 
+  Residual.df="\\kern 1em", 
+  MASE="\\kern 1em", 
+  Adj.R2="",
+  F="\\kern 1em",
+  p.value="\\kern 1em", 
+  AIC="")
+tmp2 = data.frame(
+  Model=paste("Time dependency test C ", min(respdat$Year),"-", max(respdat$Year), " data", sep=""), 
+  Residual.df="", 
+  MASE="", 
+  Adj.R2="",
+  F="", 
+  p.value="", 
+  AIC="")
+seltable=rbind(seltable,tmp1,tmp2)
+
+#5 is most complex
+m5 = gam(spawners0 ~ nspawners1+spawners1, data=respdat)
+m0=m5
+m1 = gam(spawners0 ~ 1, data=m0$model)
+m2 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=m0$model)
+m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(spawners1, sp=0.6), data=m0$model)
+a=anova(m1,m2,m3, test="F")
+
+#nonlinear ln N_t
+i=2; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="1. $ln(S_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon_t$", 
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F="", p.value="", 
+  AIC=round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+#nonlinear ln N1 + ln S1
+i=3; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="2. $ln(S_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(S_{t-1}))$ + $\\epsilon_t$", 
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
+  AIC=round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+#5 is most complex
+m5 = gam(spawners0 ~ nspawners1+spawners2, data=respdat)
+m0=m5
+m1 = gam(spawners0 ~ 1, data=m0$model)
+m2 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=m0$model)
+m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(spawners2, sp=0.6), data=m0$model)
+a=anova(m1,m2,m3, test="F")
+
+#linear ln N1 + ln S2
+i=3; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="3. $ln(S_t)$ = $\\alpha$ + $s_1(ln(N_{t-1}))$ + $s_2(ln(S_{t-2}))$ + $\\epsilon_t$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -554,7 +671,7 @@ seltable=rbind(seltable,tmp1)
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste("Model selection tests of time-dependency for the catch during spawning months using 1956-2015 data.  See Table",ref("tabappA:spawner-model-linear", pre="A"),"for definitions.")
+thecap=paste0("Table ",ref("tabappA:spawner-model-nonlinear", pre="A"), " with 1956-",Yr1-1, " data instead of ", Yr1, " to ", Yr2, " data.  See Table ",ref("tabappA:spawner-model-linear", pre="A"), " for an explanation of the parameters and model set-up.")
 fullcap=paste("Table ", ref("tabappA:spawner-model-1956", pre="A"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, escape=FALSE)
 ```
